// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Adaptateur de Restitution > génère la restitution avec annexe 1`] = `
[
  {
    "corps": "{"dateCreation":"2023-02-04T09:30:00.000Z","dateDerniereModification":"2023-02-05T09:30:00.000Z","secteurActivite":"Administration","zoneGeographique":"Bretagne, Finistère"}",
    "entete": "",
    "piedPage": "",
  },
  {
    "corps": "{"thematique":"thematique","indicateur":{"moyennePonderee":0}}",
    "entete": "entete indicateur",
    "piedPage": "piedPage indicateur",
  },
  {
    "corps": "{"titre":"reco 2","pourquoi":"parce-que","comment":"comme ça","priorisation":2,"valeurObtenue":0}{"titre":"reco 2","pourquoi":"parce-que","comment":"comme ça","priorisation":2,"valeurObtenue":0}{"titre":"reco 2","pourquoi":"parce-que","comment":"comme ça","priorisation":2,"valeurObtenue":0}{"titre":"reco 2","pourquoi":"parce-que","comment":"comme ça","priorisation":2,"valeurObtenue":0}{"titre":"reco 2","pourquoi":"parce-que","comment":"comme ça","priorisation":2,"valeurObtenue":0}{"titre":"reco 2","pourquoi":"parce-que","comment":"comme ça","priorisation":2,"valeurObtenue":0}",
    "entete": "entete",
    "piedPage": "piedPage",
  },
  {
    "corps": "{"titre":"reco 1","pourquoi":"parce-que","comment":"comme ça","priorisation":3,"valeurObtenue":0}",
    "entete": "entete",
    "piedPage": "piedPage",
  },
]
`;

exports[`Adaptateur de Restitution > génère la restitution sans annexe 1`] = `
[
  {
    "corps": "{"dateCreation":"2023-02-04T09:30:00.000Z","dateDerniereModification":"2023-02-05T09:30:00.000Z","secteurActivite":"Loisir","zoneGeographique":"Ile de France, Paris"}",
    "entete": "",
    "piedPage": "",
  },
  {
    "corps": "{"thematique":"thematique","indicateur":{"moyennePonderee":0}}",
    "entete": "entete indicateur",
    "piedPage": "piedPage indicateur",
  },
  {
    "corps": "{"titre":"reco 1","pourquoi":"parce-que","comment":"comme ça","priorisation":3,"valeurObtenue":0}",
    "entete": "entete",
    "piedPage": "piedPage",
  },
]
`;
